# hybrid-app

./: .gitignore  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/androidTest/java/com/example/hybridapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/demo/: auth.js  dialog.js  etc.js  home.js  index.js  main.js  network.js  photo.js  repository.js  vendors~auth~dialog~etc~network~photo~repository.js  vendors~main.js
app/src/main/assets/html/: popup.html  test.html  test2.html  test3.html
app/src/main/assets/lottie/: data.json
app/src/main/cpp/: rootingcheck.cpp
app/src/main/java/com/example/hybridapp/: Action.kt  App.kt  CenterActivity.kt  FlexActionInterface.kt  FlexInterface.kt  LogUrl.kt  LogUrlDao.kt  (+6 more)
app/src/main/jni/: Android.mk  Application.mk  com_example_hybridapp_MainActivity.h  com_example_hybridapp_MainActivity_Companion.h  com_example_hybridapp_MainActivity_FlexPopupInterface.h  main.cpp
app/src/main/libs/arm64-v8a/: gdb.setup  gdbserver
app/src/main/libs/armeabi-v7a/: gdb.setup  gdbserver
app/src/main/libs/x86/: gdb.setup  gdbserver
app/src/main/libs/x86_64/: gdb.setup  gdbserver
app/src/main/res/anim/: close.xml  open.xml
app/src/main/res/drawable/: circle.xml  round.xml
app/src/main/res/drawable-v24/: splash.xml
app/src/main/res/layout/: activity_intro.xml  activity_main.xml  activity_splash.xml  background_popup.xml  test.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
(+58 files in other folders)
